# spawn_urdf_cube_matrix

./: CMakeLists.txt  README.md  package.xml  sdf_urdf_changes.odt
launch/: a_matrix_world.launch
src/: a_matrix  execute_move_cube  matrix_spawn_2d.cpp  matrix_spawn_3d.cpp  move_cube_gui.cpp
worlds/: a_box.world
